# knowledge-graph

./: .dockerignore  .gitignore  .mcp.json  .tool-versions  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  index.html
api/: Dockerfile  chat.py  db.py  entrypoint.sh  main.py  mcp_server.py  pyproject.toml  retriever.py  tools.py  utils.py
api/routers/: authors.py  bible.py  documents.py  encyclopedia.py  fathers.py  graph.py  lexicon.py  library.py  paragraphs.py  search.py  summa.py
api/tests/: conftest.py  test_authors.py  test_bible.py  test_documents.py  test_encyclopedia.py  test_fathers.py  test_graph.py  test_lexicon.py  test_library.py  test_paragraphs.py  test_search.py  test_summa.py
bend/: hello.bend
pipeline/: LEMMA_API_AND_DATA_SPEC.md  LEMMA_FOLLOWUPS.md  LEMMA_KNOWN_ISSUES.md  pyproject.toml
pipeline/scripts/: backfill_bible_pt.py  backfill_ccc_pt.py  backfill_cic_canon_citations.py  backfill_council_citations.py  backfill_cross_corpus_cites.py  backfill_denzinger_bible_citations.py  backfill_denzinger_cross_refs.py  backfill_denzinger_source_edges.py  backfill_doc_section_themes_entities.py  backfill_documents_multilang.py  backfill_patristic_multilang.py  bridge_fathers_page_to_patristic_work.py  build_deferrari_dh_concordance.py  connect_document_graph_nodes.py  dedupe_graph_edges.py  demo_logos_verbum.py  export_graph_for_bend.py  fix_greek_bible_html.py  inject_cathen_crossref_edges.py  inject_cic_canons.py  inject_council_stubs_from_almanac.py  inject_councils_from_newadvent.py  inject_denzinger_deferrari.py  inject_denzinger_hunermann.py  inject_encyclopedia_entity_edges.py  inject_encyclopedia_nodes.py  inject_entity_nodes.py  inject_lemma_alias_overrides.py  inject_lemma_edges.py  inject_lemma_la_supplement.py  inject_lexicon_el.py  inject_lexicon_la.py  (+22 more)
(+1821 files in other folders)
