[project]
name = "catechism-graph-pipeline"
version = "0.1.0"
description = "Data pipeline for Catholic Catechism Knowledge Graph"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "fa2-modified>=0.3",
    "python-louvain>=0.16",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
# Lemmatization (Step 3 of lexicon pipeline). Heavy ML deps (~600MB torch +
# ~500MB models per language); installed only when running lemma_bakeoff or
# inject_lemma_edges. Pull with: uv sync --project pipeline --extra lemma
lemma = [
    "stanza>=1.8",
    "cltk>=1.4",
]
